# postik

./: .gitignore  .prettierignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SETUP-COMPLETE.md  eslint.config.js  index.html  note.html  package-lock.json  package.json  vite.config.ts
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  google-calendar-setup.md  multi-window-explained.md
docs/screenshots/: README-PLACEHOLDER.txt
scripts/: dev.sh  generate-icons.sh
src/: main.ts  note.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  google.rs  launcher.rs  lib.rs  main.rs  outlook.rs  recurring.rs  shortcuts.rs  storage.rs  timer.rs  window_manager.rs
src/lib/: types.ts
src/lib/components/: AppearancePopover.svelte  Calendar.svelte  ColorPicker.svelte  Controller.svelte  Note.svelte  OpacitySlider.svelte  Settings.svelte  Switch.svelte  Timer.svelte  TimerPopover.svelte  TitleBar.svelte
src/lib/stores/: calendar.svelte.ts  notes.svelte.ts  outlook.svelte.ts  settings.svelte.ts  stacks.svelte.ts
src/lib/utils/: colors.ts  keybind.test.ts  keybind.ts  markdown.ts  safe-open.ts  sound.ts  tags.ts  tauri.ts  textarea-actions.test.ts  textarea-actions.ts  time-parser.test.ts  time-parser.ts  updater.ts
src/styles/: global.css
