[package]
name = "postik"
version = "0.3.0"
description = "Floating sticky notes with per-window timers, colors, and always-on-top control"
authors = ["Postik Contributors"]
license = "MIT"
repository = "https://github.com/DesaJean/postik"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "postik_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-log = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["sync", "time", "rt", "macros"] }
parking_lot = "0.12"
thiserror = "1"
# Google Calendar integration: HTTP, one-shot OAuth loopback listener,
# PKCE helpers (sha256 + url-safe base64), URL parsing.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tiny_http = "0.12"
url = "2"
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"

[dev-dependencies]
tempfile = "3"
